--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <button onclick="pauseAudio()" type="button">Pause Audio</button> 
 <script type="text/javascript">
     function playAudio() {
-        var notifikasi = new Audio("notifikasi.mp3");
+        var notifikasi = new Audio("Tulus Cahaya.mp3");
         notifikasi.play();
     }
 </script>
