--- a/index.html
+++ b/index.html
@@ -8,32 +8,29 @@
 <button onclick="playAudio()" type="button">Play Audio</button>
 <button onclick="pauseAudio()" type="button">Pause Audio</button> 
 <script type="text/javascript">
-window.addEventListener('load', () => {
-				// noinspection JSUnresolvedVariable
-				let audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-				let xhr = new XMLHttpRequest();
-				xhr.open('GET', 'Tulus Cahaya.mp3');
-				xhr.responseType = 'arraybuffer';
-				xhr.addEventListener('load', () => {
-					let playsound = (audioBuffer) => {
-						let source = audioCtx.createBufferSource();
-						source.buffer = audioBuffer;
-						source.connect(audioCtx.destination);
-						source.loop = false;
-						source.start();
-
-						setTimeout(function () {
-							let t = document.createElement('p');
-							t.appendChild(document.createTextNode((new Date()).toLocaleString() + ': Sound played'));
-							document.querySelector('.output').appendChild(t);
-							playsound(audioBuffer);
-						}, 1000 + Math.random()*2500);
-					};
-
-					audioCtx.decodeAudioData(xhr.response).then(playsound);
-				});
-				xhr.send();
-			});
-		</script>
+    function playAudio() {
+        var source = "Tulus Cahaya.mp3";
+        var audio = document.createElement("audioNotifikasi");
+        audio.autoplay = true;
+        audio.load()
+        audio.addEventListener("load", function() { 
+            audio.play(); 
+        }, true);
+        audio.src = source;
+    }
+    function cekNotifikasi() {
+        $.ajax({url: "http://url/to/notifikasi", 
+                success: function(totnotif) {
+    
+                if (totnotif > 0) {
+                    //play sound
+                    playAudio();
+                }
+    
+                setTimeout(function(){ cekNotifikasi();}, 60000);//60 detik
+            }
+        });
+    }
+</script>
 </body>
 </html>
