--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <audio id="audioNotifikasi">
-  <source src="Tulus Cahaya.mp3" type="audio/mpeg">
+  <source src="audio-autoplay.wav" type="audio/mpeg">
 </audio>
 <p>Klik tombol di bawah ini untuk memutar atau pause audio.</p>
 <button onclick="playAudio()" type="button">Play Audio</button>
@@ -12,7 +12,7 @@
 				// noinspection JSUnresolvedVariable
 				let audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 				let xhr = new XMLHttpRequest();
-				xhr.open('GET', 'Tulus Cahaya.mp3');
+				xhr.open('GET', 'audio-autoplay.wav');
 				xhr.responseType = 'arraybuffer';
 				xhr.addEventListener('load', () => {
 					let playsound = (audioBuffer) => {
