--- a/index.html
+++ b/index.html
@@ -2,38 +2,18 @@
 <html>
 <body>
 <audio id="audioNotifikasi">
-  <source src="audio-autoplay.wav" type="audio/mpeg">
+  <source src="Tulus Cahaya.mp3" type="audio/mpeg">
 </audio>
 <p>Klik tombol di bawah ini untuk memutar atau pause audio.</p>
 <button onclick="playAudio()" type="button">Play Audio</button>
 <button onclick="pauseAudio()" type="button">Pause Audio</button> 
 <script type="text/javascript">
-    window.addEventListener('load', () => {
-				// noinspection JSUnresolvedVariable
-				let audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-				let xhr = new XMLHttpRequest();
-				xhr.open('GET', 'audio-autoplay.wav');
-				xhr.responseType = 'arraybuffer';
-				xhr.addEventListener('load', () => {
-					let playsound = (audioBuffer) => {
-						let source = audioCtx.createBufferSource();
-						source.buffer = audioBuffer;
-						source.connect(audioCtx.destination);
-						source.loop = false;
-						source.start();
-
-						setTimeout(function () {
-							let t = document.createElement('p');
-							t.appendChild(document.createTextNode((new Date()).toLocaleString() + ': Sound played'));
-							document.querySelector('.output').appendChild(t);
-							playsound(audioBuffer);
-						}, 1000 + Math.random()*2500);
-					};
-
-					audioCtx.decodeAudioData(xhr.response).then(playsound);
-				});
-				xhr.send();
-			});
+    <script type="text/javascript">
+    function playAudio() {
+        var notifikasi = new Audio("Tulus Cahaya.mp3");
+        notifikasi.play();
+    }
+</script>
 		
 </script>
 </body>
