--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
 <button onclick="pauseAudio()" type="button">Pause Audio</button> 
 
     <script type="text/javascript">
-    function playAudio() {
-        var notifikasi = new Audio("Tulus Cahaya.mp3");
-        notifikasi.play();
+        function playAudio() {
+        var source = "notifikasi.mp3";
+        var audio = document.createElement("audioNotifikasi");
+        audio.autoplay = true;
+        audio.load()
+        audio.addEventListener("load", function() { 
+            audio.play(); 
+        }, true);
+        audio.src = source;
+    }
+    function cekNotifikasi() {
+        $.ajax({url: "http://url/to/notifikasi", 
+                success: function(totnotif) {
+    
+                if (totnotif > 0) {
+                    //play sound
+                    playAudio();
+                }
+    
+                setTimeout(function(){ cekNotifikasi();}, 60000);//60 detik
+            }
+        });
     }
 </script>
 		
