--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				// noinspection JSUnresolvedVariable
 				let audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 				let xhr = new XMLHttpRequest();
-				xhr.open('GET', 'audio-autoplay.wav');
+				xhr.open('GET', 'Tulus Cahaya.mp3');
 				xhr.responseType = 'arraybuffer';
 				xhr.addEventListener('load', () => {
 					let playsound = (audioBuffer) => {
