--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <audio id="audioNotifikasi">
-  <source src="Tulus Cahaya.mp3" type="audio/mpeg">
+  <source src="Tulus Cahaya.mp3" type="audio/mp3">
 </audio>
 <p>Klik tombol di bawah ini untuk memutar atau pause audio.</p>
 <button onclick="playAudio()" type="button">Play Audio</button>
