--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<audio id="audioNotifikasi">
-  <source src="Tulus Cahaya.mp3" type="audio/mpeg">
-</audio>
-	<p>Klik tombol di bawah ini untuk memutar atau pause audio.</p>
-<button onclick="playAudio()" type="button">Play Audio</button>
-<button onclick="pauseAudio()" type="button">Pause Audio</button>
+test
 <script type="text/javascript">
             window.addEventListener('load', () => {
 				// noinspection JSUnresolvedVariable
